--- a/styles/custom.css
+++ b/styles/custom.css
@@ -8,4 +8,24 @@ p, .table, .btn {
 
 body {
   background: url(/img/satinweave.png) repeat 0 0;
+  overflow: auto;
+}
+
+html {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #555555;
+}
+
+html, body{
+  height: 100%;
+}
+
+.footer {
+  position: relative;
+  margin-top: -10px;
+  height: 10px;
+  clear: both;
+  padding-top:20px;
 }
